Use config to set default layouts

--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,14 @@ plugins:
 title: Kyle Dormer
 description: My name is Kyle Dormer and this is my personal website. I am a Computing undergraduate at the University of Gloucestershire, specialising in web development.
 locale: en_GB
+defaults:
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+  - scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: "default"
