Add habits section to site

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -4,6 +4,8 @@
   link: /about.html
 - name: Blog
   link: /blog.html
+- name: Habits
+  link: /habits.html
 - name: Projects
   link: https://github.com/kyle-dormer
 - name: Contact Me
